--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <header>
-        Welcome to My Fancy Website
+        Welcome to My Fancy
     </header>
     <nav>
         <a href="#home">Home</a>
